--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,7 +28,7 @@ android:fitsSystemWindows="true">
         android:layout_height="@dimen/button_size"
         android:layout_marginStart="24dp"
         android:layout_marginTop="24dp"
-        android:contentDescription="Go to Menu"
+        android:contentDescription="@string/go_to_menu"
         android:minHeight="48dp"
         android:src="@drawable/ic_menu"
         app:layout_constraintStart_toStartOf="parent"
@@ -63,6 +63,7 @@ android:fitsSystemWindows="true">
     android:layout_width="wrap_content"
     android:layout_height="match_parent"
     android:layout_gravity="start"
-    android:fitsSystemWindows="true" />
+    android:fitsSystemWindows="true"
+    app:menu="@menu/navigation_menu"/>
 
 </androidx.drawerlayout.widget.DrawerLayout>
