--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,19 +23,20 @@ android:fitsSystemWindows="true">
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageButton
-        android:id="@+id/image_menu"
+        android:id="@+id/menuImage"
         android:layout_width="@dimen/button_size"
         android:layout_height="@dimen/button_size"
         android:layout_marginStart="24dp"
         android:layout_marginTop="24dp"
         android:contentDescription="@string/go_to_menu"
         android:minHeight="48dp"
+        android:onClick="openMenu"
         android:src="@drawable/ic_menu"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"></ImageButton>
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/editImage"
         android:layout_width="@dimen/button_size"
         android:layout_height="@dimen/button_size"
         android:layout_marginStart="24dp"
@@ -45,12 +46,12 @@ android:fitsSystemWindows="true">
         app:srcCompat="@drawable/ic_edit" />
 
     <ImageView
-        android:id="@+id/imageView2"
+        android:id="@+id/recordImage"
         android:layout_width="@dimen/button_size"
         android:layout_height="@dimen/button_size"
         android:layout_marginStart="24dp"
         android:layout_marginBottom="24dp"
-        app:layout_constraintBottom_toTopOf="@+id/imageView"
+        app:layout_constraintBottom_toTopOf="@+id/editImage"
         app:layout_constraintStart_toStartOf="parent"
         app:srcCompat="@drawable/ic_record"
         android:contentDescription="TODO" />
