--- a/app/src/debug/res/drawable-anydpi/ic_record.xml
+++ b/app/src/debug/res/drawable-anydpi/ic_record.xml
@@ -2,7 +2,7 @@
     android:width="24dp"
     android:height="24dp"
     android:alpha="0.6"
-    android:tint="#333333"
+    android:tint="#FF0000"
     android:viewportWidth="24"
     android:viewportHeight="24">
     <path
