--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -54,14 +54,15 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-
-
-<com.google.android.material.navigation.NavigationView
+    <com.google.android.material.navigation.NavigationView
     android:id="@+id/nav_view"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_gravity="start"
-    android:fitsSystemWindows="true"
-    app:menu="@menu/navigation_menu"/>
+    android:fitsSystemWindows="true">
+
+
+    </com.google.android.material.navigation.NavigationView>
+
 
 </androidx.drawerlayout.widget.DrawerLayout>
