--- a/app/src/main/res/layout/sound_menu.xml
+++ b/app/src/main/res/layout/sound_menu.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/sound_menu"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:gravity="center_horizontal"
+    android:orientation="vertical"
     android:background="@color/white">
 
 
@@ -30,6 +31,7 @@
         android:stepSize="1.0"
         android:valueFrom="0.0"
         android:valueTo="100.0"
+        android:theme="@style/sliderTheme"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.49"
@@ -44,6 +46,7 @@
         android:stepSize="1.0"
         android:valueFrom="0.0"
         android:valueTo="100.0"
+        android:theme="@style/sliderTheme"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -57,6 +60,7 @@
         android:stepSize="1.0"
         android:valueFrom="0.0"
         android:valueTo="100.0"
+        android:theme="@style/sliderTheme"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -70,6 +74,7 @@
         android:stepSize="1.0"
         android:valueFrom="0.0"
         android:valueTo="100.0"
+        android:theme="@style/sliderTheme"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -180,7 +185,7 @@
         android:layout_width="31dp"
         android:layout_height="24dp"
         android:layout_marginTop="4dp"
-        android:onClick="close"
+        android:backgroundTint="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.918"
         app:layout_constraintStart_toStartOf="parent"
