VolumeData added, Lautstärke einstellbar, Beispiel Button in main-activity eingefügt

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,11 +7,6 @@
     android:layout_height="match_parent"
     android:fitsSystemWindows="true">
 
-    <FrameLayout
-        android:id="@+id/fragment_container"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
-
     <!-- Layout for the main body of screen [FassadenBild] (drawer wird darüber geschoben) -->
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -50,6 +45,16 @@
             app:layout_constraintBottom_toTopOf="@+id/editImage"
             app:layout_constraintStart_toStartOf="parent"
             app:srcCompat="@drawable/ic_record" />
+
+        <Button
+            android:id="@+id/button2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:onClick="playVolumeSound"
+            android:text="PlaySound"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
