--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,12 +19,15 @@
             android:layout_height="@dimen/button_size"
             android:layout_marginStart="24dp"
             android:layout_marginTop="24dp"
+            android:layout_marginLeft="45dp"
             android:contentDescription="@string/go_to_menu"
             android:minHeight="48dp"
             android:onClick="openMenu"
             android:src="@drawable/ic_menu"
+            android:layout_marginEnd="20sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
+
 
         <ImageView
             android:id="@+id/editImage"
@@ -34,7 +37,8 @@
             android:layout_marginBottom="24dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:srcCompat="@drawable/ic_edit" />
+            app:srcCompat="@drawable/ic_edit"
+            />
 
         <ImageView
             android:id="@+id/recordImage"
@@ -46,6 +50,14 @@
             app:layout_constraintStart_toStartOf="parent"
             app:srcCompat="@drawable/ic_record" />
 
+        <ImageView
+            android:id="@id/drawer_layout"
+            android:layout_width="70dp"
+            android:layout_height="53dp"
+            android:layout_marginEnd="32dp"
+            app:layout_constraintBottom_toTopOf="@id/editImage"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:srcCompat="@drawable/img_1" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
